// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavLink /> should render 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c1 :first-of-type {
  margin-top: 0px;
}

.c1 :hover,
.c1 :active {
  color: rgb(0, 104, 69);
}

<a
  class="c0 c1"
  href="/my-slug-is-here/"
>
  This is my title
</a>
`;

exports[`<NavLink /> should render link to index 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c1 :first-of-type {
  margin-top: 0px;
}

.c1 :hover,
.c1 :active {
  color: rgb(0, 104, 69);
}

<a
  class="c0 c1"
  href="/"
>
  Etusivu
</a>
`;
